--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ django-storages==1.12.2
 django-templated-mail==1.1.1
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
+dj-database-url==2.1.0
 djoser==2.2.2
 frozenlist==1.4.0
 gunicorn==20.1.0
@@ -53,4 +54,4 @@ django-storages
 environs
 python-dotenv
 django-compressor
-dj-database-url
+
