--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ cryptography==41.0.5
 defusedxml==0.8.0rc2
 Django==4.2.7
 django-cors-headers==3.7.0
+django-storages==1.14.2
 django-environ==0.4.5
 django-storages==1.12.2
 django-templated-mail==1.1.1
