--- a/requirements.txt
+++ b/requirements.txt
@@ -22,7 +22,7 @@ django-storages==1.12.2
 django-templated-mail==1.1.1
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
-dj-database-url==2.1.0
+dj-database-url
 djoser==2.2.2
 frozenlist==1.4.0
 gunicorn==20.1.0
@@ -51,7 +51,6 @@ typing_extensions==4.8.0
 urllib3==1.26.18
 whitenoise==5.3.0
 yarl==1.9.3
-django-storages 
 environs
 python-dotenv
 django-compressor
