--- a/requirements.txt
+++ b/requirements.txt
@@ -14,8 +14,8 @@ cffi==1.16.0
 charset-normalizer==2.0.12
 cryptography==41.0.5
 defusedxml==0.8.0rc2
-Django
-django-cors-headers==3.7.0
+Django==5.0.1
+django-cors-headers==4.1.0
 django-storages==1.12.2
 django-environ==0.4.5
 django-storages==1.12.2
@@ -33,8 +33,8 @@ multidict==6.0.4
 mutagen==1.45.1
 oauthlib==3.2.2
 Pillow
-psycopg2-binary
-psycopg
+psycopg2-binary==2.9.6
+psycopg==3.1.9
 pycparser==2.21
 PyJWT==2.1.0
 python-dateutil==2.8.2
@@ -49,7 +49,7 @@ social-auth-core==4.4.2
 sqlparse==0.4.4
 typing_extensions==4.8.0
 urllib3==1.26.18
-whitenoise
+whitenoise==6.6.0
 yarl==1.9.3
 environs
 python-dotenv
