--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ cffi==1.16.0
 charset-normalizer==2.0.12
 cryptography==41.0.5
 defusedxml==0.8.0rc2
-Django==5.0.1
+Django==4.2.10
 django-cors-headers==4.1.0
 django-storages==1.12.2
 django-environ==0.4.5
@@ -25,7 +25,7 @@ djangorestframework-simplejwt==5.3.0
 dj-database-url
 djoser==2.2.2
 frozenlist==1.4.0
-gunicorn
+gunicorn==20.1.0
 idna==3.4
 jmespath==0.10.0
 magic-filter==1.0.12
