--- a/requirements.txt
+++ b/requirements.txt
@@ -14,8 +14,8 @@ cffi==1.16.0
 charset-normalizer==2.0.12
 cryptography==41.0.5
 defusedxml==0.8.0rc2
-Django==5.0.1
-django-cors-headers==4.1.0
+Django
+django-cors-headers==4.3.1
 django-storages==1.12.2
 django-environ==0.4.5
 django-storages==1.12.2
