--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ cffi==1.16.0
 charset-normalizer==2.0.12
 cryptography==41.0.5
 defusedxml==0.8.0rc2
-Django
+Django==4.2.10
 django-cors-headers==4.3.1
 django-storages==1.12.2
 django-environ==0.4.5
@@ -34,7 +34,7 @@ mutagen==1.45.1
 oauthlib==3.2.2
 Pillow
 psycopg2-binary==2.9.6
-psycopg==3.1.9
+psycopg2==2.9.9
 pycparser==2.21
 PyJWT==2.1.0
 python-dateutil==2.8.2
