--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,8 @@ asgiref==3.7.2
 async-timeout==4.0.3
 attrs==23.1.0
 Babel==2.9.1
-boto3==1.18.63
-botocore==1.21.63
+boto3
+botocore
 certifi==2023.11.17
 cffi==1.16.0
 charset-normalizer==2.0.12
