--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-aiogram==3.4.1
+aiogram
 aiohttp
 wheel
 aiosignal==1.3.1
@@ -34,6 +34,7 @@ mutagen==1.45.1
 oauthlib==3.2.2
 Pillow
 psycopg2-binary==2.9.6
+python-telegram-bot[rate-limiter]==20.1
 psycopg2==2.9.9
 pycparser==2.21
 PyJWT==2.1.0
